# wkp

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  SPEC.md  TODO.md  package-lock.json  pyproject.toml  setup.py  test_cibuildwheel.ps1
.claude/: settings.local.json
.github/workflows/: cpp.yml  js.yml  native-js-artifacts.yml  npm-publish.yml  pages.yml  python.yml  wheels.yml  wkp-release.yml
benchmark/: benchmark.py
bindings/cpp/: README.md
bindings/cpp/bench/: benchmark_cpp.cpp
bindings/cpp/include/wkp/: core.hpp
bindings/cpp/tests/: test_errors.cpp  test_geometry_encoder.cpp  test_integration_txt.cpp  test_vectors.cpp
bindings/javascript/: .gitignore  README.md  package-lock.json  package.json
bindings/javascript/scripts/: assert-runtime-version.mjs  sync-version.mjs
bindings/python/: .gitignore  README.md  pyproject.toml  setup.py  test_cibuildwheel.ps1
bindings/python/benchmark/: bench_flat_api.py  benchmark.py
bindings/python/src/wkp/: .gitignore  __init__.py  __init__.pyi  _core.pyi  core_nb.cpp
bindings/python/tests/: test_core.py  test_encode.py  test_geometry_frame.py  test_integration_csv.py  test_wkp.py
core/: README.md
core/bench/: benchmark_core.cpp
core/include/wkp/: _version.h  core.h  core.hpp
core/src/: core.c  core.cpp  core_internal.hpp
core/tests/: test_c_api.cpp  test_c_api_errors.cpp  test_c_api_geometry.cpp
data/integration_tests/: MANIFEST.json  README.md
data/integration_tests/floats/decode/: known_3d_mixed_precision.txt  python_polyline.txt
data/integration_tests/floats/encode/: examples.txt  known_3d_mixed_precision.txt  python_polyline.txt
data/integration_tests/geometry/decode/: linestring_reference.txt  point_reference.txt
data/integration_tests/geometry/encode/: linestring_reference.txt  made_up_multilinestring.txt  multi_line_encoding.txt  point_reference.txt  self_test_linestring.txt
docs/: app.js  index.html  metrics-worker.js  release-policy.md  styles.css  wkt.js
scripts/: build_all.py  check_fixture_manifest.py  run_docs_demo.py  test_all.py
src/wkp/: .gitignore  __init__.py  encode.pyx
tests/: test_encode.py
