[project]
name = "wkp"
description = "Well Known Polylines - fast and compact encoding of geometries to strings using the Google Polylines algorithm"
readme = "README.md"
authors = [
    {name = "kodonnell", email = "kodonnell@users.noreply.github.com"}
]
license = "MIT"
license-files = ["LICENSE*"]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "shapely",
]
keywords = [
    "wkp",
    "google polyline",
    "geometry encoding",
    "geospatial",
    "geospatial encoding",
    "geospatial compression",
    "geospatial data",
    "geospatial processing",
    "geospatial analysis",
    "geospatial visualization",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
]
[project.urls]
Homepage = "https://github.com/kodonnell/wkp"
"Bug Tracker" = "https://github.com/kodonnell/wkp/issues"

[build-system]
requires = [
    "setuptools >= 70",  # or >=77 if you want stricter modern enforcement
    "wheel >= 0.40",
    "setuptools_scm >= 8.0",
    "Cython >= 3.0.8",
    "packaging >= 23"
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "Cython >= 3.0.0",
    "shapely",
    "pytest",
    "build",
    "twine",
    "polyline"
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.pxd", "*.pyx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]          # adds src/ to sys.path → clean imports like `from my_package import …`
addopts = [
    "--import-mode=importlib",   # modern / recommended import style (avoids __init__.py issues)
    "-ra",              # show extra summary info (skipped, xfailed, etc.) at the end
    "--strict-markers", # prevent typos in @pytest.mark.*
    "--strict-config",  # fail loudly on configuration errors
]
python_files = ["test_*.py", "*_test.py"]   # default anyway, but explicit is fine
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools_scm]
write_to = "src/wkp/_version.py"
write_to_template = "__version__ = \"{version}\""

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_* *s390x* *ppc64le* *i686*"
dependency-versions = "latest"
test-requires = ["pytest", "polyline"]
test-command = "pytest -ra -v --import-mode=importlib -o pythonpath= {project}/tests"
build-frontend = "build"
environment = {USE_CYTHON = "1"}